# PathTracer

./: .gitignore  CMakeLists.txt  README.md
Renders/: Reame.txt
Source/: SDLauxiliary.h  boundingbox.cpp  boundingbox.h  bsdf_lobe.h  camera.h  enums.h  geometry.h  intersection.h  light.h  main.cpp  material.h  math_utils.h  math_vector_utils.h  object.h  octree.cpp  octree.h  pathtrace.h  ray.h  raycast.cpp  raycast.h  raytrace.cpp  raytrace.h  sampler.h  scatterevent.h  scene.h  settings.h  skeleton.cpp  surfaceinteraction.h  texture.h  transferfunction.h  triangle.cpp  triangle.h  utils.cpp  utils.h  vector_type.h  vectors.h  volume.cpp  volume.h
include/tinytiff/: tinytiff.dox  tinytiff.readme
include/tinytiff/test/tinytiff_reader_test/: Makefile  Makefile_nolibtiff  main.cpp
include/tinytiff/test/tinytiffwriter_test/: Makefile  main.cpp
